@@ -1,7 +1,7 @@
 Package: topicmodels
 Type: Package
 Title: Topic Models
-Version: 0.2-4
+Version: 0.2-5
 Authors@R: c(person("Bettina", "Grün", role = c("aut", "cre"),
                     email = "Bettina.Gruen@jku.at"),
              person("Kurt", "Hornik", role = "aut"))
@@ -15,14 +15,14 @@ Imports: stats4, methods, modeltools, slam, tm (>= 0.6)
 Suggests: lasso2, lattice, lda, OAIHarvester, SnowballC, XML,
         corpus.JSS.papers
 Additional_repositories: http://datacube.wu.ac.at
-SystemRequirements: GNU Scientific Library version >= 1.8
+SystemRequirements: GNU Scientific Library version >= 1.8, C++11
 License: GPL-2
 Encoding: UTF-8
 LazyLoad: yes
 NeedsCompilation: yes
-Packaged: 2016-05-23 06:13:16 UTC; hornik
+Packaged: 2017-02-28 10:15:45 UTC; hornik
 Author: Bettina Grün [aut, cre],
   Kurt Hornik [aut]
 Maintainer: Bettina Grün <Bettina.Gruen@jku.at>
 Repository: CRAN
-Date/Publication: 2016-05-23 08:33:09
+Date/Publication: 2017-02-28 11:24:36
