@@ -1,18 +1,18 @@
-fbafdf7fb7562ccd299b12878ee735e7 *DESCRIPTION
-2173dd6da1cf7ae6ceed608767731709 *NAMESPACE
+3cfbeefba1239cd1a64a6eab815504b3 *DESCRIPTION
+71d836d6068259e11eb3080f52cd8a12 *NAMESPACE
 1ba3e2fe59712761069f9f5ba4d181fa *R/allclasses.R
 2c6b699c7495d45b6183de2d48f50c04 *R/build_graph.R
 82a9d4baeb26d8279213e565c765a645 *R/control.R
-5020b5b4adc5130685a899af95449563 *R/ctm.R
-b55de0f0a6ff277ef8dd7526515d2366 *R/lda.R
+1edcecf298e1ddb186d742f2b89aaa30 *R/ctm.R
+33cd14116e78adbc473c7ffa54f1ea01 *R/lda.R
 8db940a9a83cdbe1a23c5546f0357aa6 *R/utils.R
 7080a249b1da92dab9baad3bcdb70f3f *build/vignette.rds
 1e44cc7c64241cebc7f9fef062a3c90d *data/AssociatedPress.rda
 7fb9e60b303026053d206d5b6b36d507 *inst/CITATION
-e5686fcc85bdf9358686c1faef798990 *inst/NEWS.Rd
-229259315c204ecdd8639a61376fbf3c *inst/doc/topicmodels.R
-1a88108bc769ec38da97e013b2a7d1e0 *inst/doc/topicmodels.Rnw
-3177cb6cbac681b664dc04a67e6a5097 *inst/doc/topicmodels.pdf
+6f90f53c8cbb5ffbe7a5f3fd90c235fd *inst/NEWS.Rd
+5660774bac683d277cd84d51c96cc902 *inst/doc/topicmodels.R
+b13499db34c66e8aa21e7b1f63863aab *inst/doc/topicmodels.Rnw
+6e39421686f52d400ad3322086d3279d *inst/doc/topicmodels.pdf
 4f959e8d6600030b0a41abe11a609e8a *man/associatedpress.Rd
 4ed9a4763b98c7aad179682b41b111ee *man/build_graph.Rd
 19b8648a5988807493705ce13926670a *man/ctm.Rd
@@ -40,6 +40,7 @@ fb65f047ea8055de056268f16a06fc80 *src/gsl-wrappers.c
 0f41920dc062b9e098b76016c7eb2150 *src/gsl-wrappers.h
 2523287ed75cef39e09c0376e9fe95b4 *src/inference.c
 4a0aed38ce86b771d9ab14303a014efa *src/inference.h
+f3084cb4b11f05315622f70f664a0cf2 *src/init.c
 0ee246f713170963f29704003f0a100a *src/lda-alpha.c
 3fdbb09a1a88265d2a06756537d3759a *src/lda-alpha.h
 7377dbe8b5795d43fc9e162717993eb1 *src/lda-inference.c
@@ -58,5 +59,5 @@ c0c4c792fa313d44e2f48196ec8049d2 *src/utilities.cpp
 fb883ef7f45244fd298b177113eb399b *src/utilities.h
 244d6fe9c9005bf8f6c9df6930f853a3 *src/utils.c
 9778a166021234fc9f78ce1c33d93cc3 *src/utils.h
-1a88108bc769ec38da97e013b2a7d1e0 *vignettes/topicmodels.Rnw
+b13499db34c66e8aa21e7b1f63863aab *vignettes/topicmodels.Rnw
 77a7cbbe2257696a8e3d5c5729de1200 *vignettes/topicmodels.bib
